FIX: Actions for new inline rows are now aligning properly

--- a/_assets/css/imports/add-new-inline-extended.less
+++ b/_assets/css/imports/add-new-inline-extended.less
@@ -46,3 +46,7 @@
 	vertical-align: top;
 	padding:15px 8px;
 }
+
+.cms table.ss-gridfield-table tbody .ss-gridfield-inline-new-extended--row td.col-buttons {
+	padding:8px;
+}
