--- a/css/mwm.gridfield.utils.css
+++ b/css/mwm.gridfield.utils.css
@@ -54,6 +54,9 @@
   vertical-align: top;
   padding: 15px 8px;
 }
+.cms table.ss-gridfield-table tbody .ss-gridfield-inline-new-extended--row td.col-buttons {
+  padding: 8px;
+}
 .cms .ss-gridfield-timeline table.ss-gridfield-table {
   display: block;
   width: 100%;
